--- a/cliente/package.json
+++ b/cliente/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "admin-lte": "^3.0.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.1",
+    "ng-bootstrap": "^1.6.3",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
